--- a/core/search/css/search.less
+++ b/core/search/css/search.less
@@ -50,7 +50,7 @@
 			position: absolute;
 			right: 0px;
 			top: 3px;
-			z-index: 9;
+			z-index: 2;
 
 			&:active {
 				opacity: 0.5;
